fix: fixed textoverflow issue in hero section

--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -1,32 +1,34 @@
 @use "/src/styles/abstracts" as ab;
 
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-    background-image: url("../../../public/home/opportunities/opportunities.webp");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+	background-image: url("../../../public/home/opportunities/opportunities.webp");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 
-    height: clamp(15rem, 50vi, 28rem);
+	// height: clamp(15rem, 50vi, 28rem);
+	min-height: 15rem;
 
-    text-align: center;
-    color: var(--white);
+	text-align: center;
+	color: var(--white);
 
-    border-image: fill 0
-        linear-gradient(
-            180deg,
-            rgba(0, 0, 0, 0.5) 0%,
-            rgba(10, 75, 161, 0.75) 0%
-        );
+	border-image: fill 0
+		linear-gradient(
+			180deg,
+			rgba(0, 0, 0, 0.5) 0%,
+			rgba(10, 75, 161, 0.75) 0%
+		);
 
-    @include ab.screen-64 {
-        background-position: center 25%;
-    }
+	@include ab.screen-64 {
+		background-position: center 25%;
+	}
 
-    h1 {
-        font-size: clamp(2.5rem, 3.75vi, 3.75rem);
-    }
+	h1 {
+		font-size: clamp(2.5rem, 3.75vi, 3.75rem);
+		padding-block: 5rem;
+	}
 }
